--- a/Examples/hreview.html
+++ b/Examples/hreview.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link rel="dataset" href="http://test.server/dataset/Examples/dataset-hreview.json" type="application/json">
-	<title>Dataset Test hreview</title>
+	<link rel="dataset" href="dataset-hreview.json" type="application/json">
+	<title>hReview</title>
    	<style type="text/css">
 	<!--
 	body, p, ol, ul, td {
@@ -11,7 +11,7 @@
 		font-size:small;
 	}
 	h3, h2, h1{
-		color:#003366;
+		color:black;
 		font-weight:bold;
 	}
 	h2 {
@@ -25,7 +25,7 @@
 	bottom: 0px;
 	}
 	a:link, a:visited {
-		color:#003366;
+		color:black;
 		text-decoration:none;
 	}
 	textarea{
@@ -38,11 +38,12 @@
 		width:80%;
 		height:400px;
 		}
+	a:hover { text-decoration:none; background-color:black;color:white; }
 	//-->
 	</style>
 </head>
 <body>
-<h1>Dataset Test hreview</h1>
+<h1>hReview</h1>
 <div class="hreview">
    <span class="item"><span class="fn">L'Amourita Pizza</span></span>
    <abbr class="rating" title="4">****</abbr>
@@ -50,6 +51,6 @@
    <span class="dtreviewed" title="2009-01-06">6th January 2009</span>
    <span class="summary">"Delicious, tasty pizza in Eastlake."</span>
 </div>
-<p>Get RDF <a href="javascript:void(location.href='http://test.server/dataset/?query='+location.href)">dataset</a></p>
+<p>Get RDF <a href="javascript:void(location.href='http://contentstate.co.uk/transformr/dataset/'+location.href)">dataset</a></p>
 </body>
 </html>
