--- a/Examples/organization.html
+++ b/Examples/organization.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link rel="dataset" href="http://test.server/dataset/Examples/dataset-organization.json" type="application/json">
-	<title>Dataset Test Organization</title>
+	<link rel="dataset" href="dataset-organization.json" type="application/json">
+	<title>Organization</title>
    	<style type="text/css">
 	<!--
 	body, p, ol, ul, td {
@@ -11,7 +11,7 @@
 		font-size:small;
 	}
 	h3, h2, h1{
-		color:#003366;
+		color:black;
 		font-weight:bold;
 	}
 	h2 {
@@ -25,7 +25,7 @@
 	bottom: 0px;
 	}
 	a:link, a:visited {
-		color:#003366;
+		color:black;
 		text-decoration:none;
 	}
 	textarea{
@@ -38,11 +38,12 @@
 		width:80%;
 		height:400px;
 		}
+	a:hover { text-decoration:none; background-color:black;color:white; }
 	//-->
 	</style>
 </head>
 <body>
-<h1>Dataset Test Organization</h1>
+<h1>Organization</h1>
 <div class="vcard" id="BusinessEntity">
    <span class="fn"><a class="url org" href="http://pizza.example.com/">L'Amourita Pizza</a></span>, 
    <div class="adr">
@@ -53,6 +54,6 @@
 	 Tel: <span class="tel">206-555-7242</span>
    </div>
 </div>
-<p>Get RDF <a href="javascript:void(location.href='http://test.server/dataset/?query='+location.href)">dataset</a></p>
+<p>Get RDF <a href="javascript:void(location.href='http://contentstate.co.uk/transformr/dataset/'+location.href)">dataset</a></p>
 </body>
 </html>
