--- a/Examples/rdfa.html
+++ b/Examples/rdfa.html
@@ -3,7 +3,7 @@
   <head>
     <title>Dataset test RDFa</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link rel="dataset" href="http://test.server/dataset/Examples/dataset-rdfa.json"/>
+    <link rel="dataset" href="dataset-rdfa.json"/>
    	<style type="text/css">
 	<!--
 	body, p, ol, ul, td {
@@ -11,7 +11,7 @@
 		font-size:small;
 	}
 	h3, h2, h1{
-		color:#003366;
+		color:black;
 		font-weight:bold;
 	}
 	h2 {
@@ -25,7 +25,7 @@
 	bottom: 0px;
 	}
 	a:link, a:visited {
-		color:#003366;
+		color:black;
 		text-decoration:none;
 	}
 	textarea{
@@ -38,6 +38,7 @@
 		width:80%;
 		height:400px;
 		}
+	a:hover { text-decoration:none; background-color:black;color:white; }
 	//-->
 	</style>
   </head>
@@ -48,6 +49,6 @@
 		<p>Contact: <span property="name">John Smith</span> (<span property="nick">Smithy</span>) at <a rel="mbox" href="mailto:smithy@example.com">smithy@example.com</a><br/>
 			 Web: <a rel="weblog" href="http://example.com/">http://example.com/</a></p>
 	</div>
-	<p>Get RDF <a href="javascript:void(location.href='http://test.server/dataset/?query='+location.href)">dataset</a></p>
+<p>Get RDF <a href="javascript:void(location.href='http://contentstate.co.uk/transformr/dataset/'+location.href)">dataset</a></p>
 </body>
 </html>
