--- a/Examples/foaf.html
+++ b/Examples/foaf.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link rel="dataset" href="http://test.server/dataset/Examples/dataset-foaf.json" type="application/json">
-  	<title>Dataset test FOAF</title>
+	<link rel="dataset" href="dataset-foaf.json" type="application/json">
+  	<title>FOAF</title>
 	<style type="text/css">
 	<!--
 	body, p, ol, ul, td {
@@ -11,6 +11,7 @@
 		font-size:small;
 	}
 	h3, h2, h1{
+		color:black;
 		font-weight:bold;
 	}
 	h2 {
@@ -24,7 +25,7 @@
 	bottom: 0px;
 	}
 	a:link, a:visited {
-		color:#003366;
+		color:black;
 		text-decoration:none;
 	}
 	textarea{
@@ -36,12 +37,13 @@
 		overflow:auto;
 		width:80%;
 		height:400px;
-		}
+	}
+	a:hover { text-decoration:none; background-color:black;color:white; }
 	//-->
 	</style>	
 </head>
 <body>
-<h1><a href="http://weborganics.co.uk/dataset/dataset-foaf.html">Dataset test FOAF</a></h1>
+<h1><a href="http://weborganics.co.uk/dataset/dataset-foaf.html">FOAF</a></h1>
 <div id="example">
 <!-- start Foaf -->
 <div class="vcard" id="weborganics">
@@ -49,9 +51,9 @@
 	<span class="given-name">Martin</span> 
 	<span class="family-name">McEvoy</span>
 </p>
-<p><img class="photo" src="http://weborganics.co.uk/images/me.jpg" alt="weborganics"></p>
+<p><img class="photo" src="../images/me.jpg" alt="weborganics"></p>
 <p>Contact: <a id="mbox" class="email" href="mailto:weborganics@googlemail.com">weborganics@googlemail.com</a></p>
-<p>Web: <a class="url" href="http://weborganics.co.uk/">WebOrganics</a></p>
+<p>Web: <a class="url org" href="http://contentstate.co.uk/">Content State</a></p>
 <div>
 	<p><span class="geo">
 		Location: <abbr title="53.7552" class="latitude">N 53.7552</abbr>,
@@ -94,7 +96,7 @@
 </ul>
 </div>
 <!-- / Foaf-->
-<p>Get RDF <a href="javascript:void(location.href='http://test.server/dataset/?query='+location.href)">dataset</a></p>
+<p>Get RDF <a href="javascript:void(location.href='http://contentstate.co.uk/transformr/dataset/'+location.href)">dataset</a></p>
 </div>
 </body>
 </html>
