--- a/Examples/hcal.html
+++ b/Examples/hcal.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link rel="dataset" href="http://test.server/dataset/Examples/dataset-hcal.json" type="application/json">
-	<title>Dataset Test hcal</title>
+	<link rel="dataset" href="dataset-hcal.json" type="application/json">
+	<title>hCalendar</title>
    	<style type="text/css">
 	<!--
 	body, p, ol, ul, td {
@@ -11,7 +11,7 @@
 		font-size:small;
 	}
 	h3, h2, h1{
-		color:#003366;
+		color:black;
 		font-weight:bold;
 	}
 	h2 {
@@ -25,7 +25,7 @@
 	bottom: 0px;
 	}
 	a:link, a:visited {
-		color:#003366;
+		color:black;
 		text-decoration:none;
 	}
 	textarea{
@@ -37,12 +37,13 @@
 		overflow:auto;
 		width:80%;
 		height:400px;
-		}
+	}
+	a:hover { text-decoration:none; background-color:black;color:white; }
 	//-->
 	</style>
 </head>
 <body>
-<h1>Dataset Test hcal</h1>
+<h1>hCalendar</h1>
 <div class="vevent" id="employee-review">
   <h5 class="summary">Annual Employee Review</h5>
   <div>posted on <abbr class="dtstamp" title="19970901T1300Z">September 1, 1997</abbr></div>
@@ -53,6 +54,6 @@
   <p>Filed under:
   <span class="category">Business, Human Resources</span></p>
 </div>
-<p>Get RDF <a href="javascript:void(location.href='http://test.server/dataset/?query='+location.href)">dataset</a></p>
+<p>Get RDF <a href="javascript:void(location.href='http://contentstate.co.uk/transformr/dataset/'+location.href)">dataset</a></p>
 </body>
 </html>
