--- a/Examples/hcard.html
+++ b/Examples/hcard.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link rel="dataset" href="http://test.server/dataset/Examples/dataset-vcard.json" type="application/json">
-	<title>Dataset Test vcard</title>
+	<link rel="dataset" href="dataset-hcard.json" type="application/json">
+	<title>hCard</title>
    	<style type="text/css">
 	<!--
 	body, p, ol, ul, td {
@@ -11,7 +11,7 @@
 		font-size:small;
 	}
 	h3, h2, h1{
-		color:#003366;
+		color:black;
 		font-weight:bold;
 	}
 	h2 {
@@ -25,7 +25,7 @@
 	bottom: 0px;
 	}
 	a:link, a:visited {
-		color:#003366;
+		color:black;
 		text-decoration:none;
 	}
 	textarea{
@@ -37,12 +37,13 @@
 		overflow:auto;
 		width:80%;
 		height:400px;
-		}
+	}
+	a:hover { text-decoration:none; background-color:black;color:white; }
 	//-->
 	</style>
 </head>
 <body>
-<h1>Dataset Test vcard</h1>
+<h1>hCard</h1>
 <div class="vcard" id="smithy">
    <span class="fn">John Smith</span> aka 
    &quot;<a class="url nickname" href="http://www.example.com/">Smithy</a>&quot;
@@ -51,6 +52,6 @@
    <span class="title">Engineer</span>  
    and is a friend of <a href="http://darryl-blog.example.com/" rel="friend">Darryl</a>
 </div>
-<p>Get RDF <a href="javascript:void(location.href='http://test.server/dataset/?query='+location.href)">dataset</a></p>
+<p>Get RDF <a href="javascript:void(location.href='http://contentstate.co.uk/transformr/dataset/'+location.href)">dataset</a></p>
 </body>
 </html>
