--- a/dataset/foaf.html
+++ b/dataset/foaf.html
@@ -96,7 +96,7 @@
 </ul>
 </div>
 <!-- / Foaf-->
-<p>Get RDF <a href="javascript:void(location.href='http://contentstate.co.uk/transformr/dataset/'+location.href)">dataset</a></p>
+  <p>Get RDF <a href="javascript:void(location.href='http://weborganics.co.uk/dataset/?url='+location.href)">dataset</a></p>
 </div>
 </body>
 </html>
