--- a/dataset/rdfa.html
+++ b/dataset/rdfa.html
@@ -47,8 +47,8 @@
 
 	<div id="rdfa-101" typeof="Person" about="#rdfa-101">
 		<p>Contact: <span property="name">John Smith</span> (<span property="nick">Smithy</span>) at <a rel="mbox" href="mailto:smithy@example.com">smithy@example.com</a><br/>
-			 Web: <a rel="weblog" href="http://example.com/">http://example.com/</a></p>
+		   Web: <a rel="weblog me" href="http://example.com/">http://example.com/</a></p>
 	</div>
-<p>Get RDF <a href="javascript:void(location.href='http://contentstate.co.uk/transformr/dataset/'+location.href)">dataset</a></p>
+  <p>Get RDF <a href="javascript:void(location.href='http://weborganics.co.uk/dataset/?url='+location.href)">dataset</a> or <a href="http://xml.mfd-consult.dk/foaf/explorer/?foaf=http://weborganics.co.uk/dataset/?url=http://weborganics.co.uk/dataset/rdfa.html">Explore FOAF</a></p>
 </body>
 </html>
