--- a/dataset/article.html
+++ b/dataset/article.html
@@ -4,11 +4,18 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="dataset" href="dataset-article.json" type="application/json">
 	<title>HTML 5 Article + hMedia</title>
-	<style type="text/css">
+   	<style type="text/css">
 	<!--
 	body, p, ol, ul, td {
 		font-family:"Lucida Sans Unicode",Verdana,sans-serif;
 		font-size:small;
+	}
+	h3, h2, h1{
+		color:black;
+		font-weight:bold;
+	}
+	h2 {
+		font-size:20px;
 	}
 	hgroup, aside {
 	position: relative;
@@ -17,16 +24,8 @@
 	right: 0px;
 	bottom: 0px;
 	}
-	ol {list-style-type:upper-roman}
-	h3, h2, h1{
-		color:#003366;
-		font-weight:bold;
-	}
-	h2 {
-		font-size:20px;
-	}
 	a:link, a:visited {
-		color:#003366;
+		color:black;
 		text-decoration:none;
 	}
 	textarea{
@@ -39,6 +38,7 @@
 		width:80%;
 		height:400px;
 		}
+	a:hover { text-decoration:none; background-color:black;color:white; }
 	//-->
 	</style>
 </head>
@@ -78,7 +78,7 @@
 	</ol>
 	</div>
 <aside>
-  <p>Get RDF <a href="javascript:void(location.href='http://contentstate.co.uk/transformr/dataset/'+location.href)">dataset</a></p></aside>
+  <p>Get RDF <a href="javascript:void(location.href='http://weborganics.co.uk/dataset/?url='+location.href)">dataset</a></p></aside>
 </article>
 </body>
 </html>
