--- a/dataset/hatom.html
+++ b/dataset/hatom.html
@@ -60,6 +60,6 @@
 		</div>
 	</div></div>
 </div>
-<p>Get RDF <a href="javascript:void(location.href='http://contentstate.co.uk/transformr/dataset/'+location.href)">dataset</a></p>
+  <p>Get RDF <a href="javascript:void(location.href='http://weborganics.co.uk/dataset/?url='+location.href)">dataset</a></p>
 </body>
 </html>
