--- a/dataset/hcal.html
+++ b/dataset/hcal.html
@@ -54,6 +54,6 @@
   <p>Filed under:
   <span class="category">Business, Human Resources</span></p>
 </div>
-<p>Get RDF <a href="javascript:void(location.href='http://contentstate.co.uk/transformr/dataset/'+location.href)">dataset</a></p>
+  <p>Get RDF <a href="javascript:void(location.href='http://weborganics.co.uk/dataset/?url='+location.href)">dataset</a></p>
 </body>
 </html>
