--- a/dataset/foaf.html
+++ b/dataset/foaf.html
@@ -43,7 +43,7 @@
 	</style>	
 </head>
 <body>
-<h1><a href="http://weborganics.co.uk/dataset/dataset-foaf.html">FOAF</a></h1>
+<h1><a href="foaf.html">FOAF</a></h1>
 <div id="example">
 <!-- start Foaf -->
 <div class="vcard" id="weborganics">
@@ -51,9 +51,9 @@
 	<span class="given-name">Martin</span> 
 	<span class="family-name">McEvoy</span>
 </p>
-<p><img class="photo" src="../images/me.jpg" alt="weborganics"></p>
+<p><img class="photo" src="http://weborganics.co.uk/images/me.jpg" alt="weborganics"></p>
 <p>Contact: <a id="mbox" class="email" href="mailto:weborganics@googlemail.com">weborganics@googlemail.com</a></p>
-<p>Web: <a class="url org" href="http://contentstate.co.uk/">Content State</a></p>
+<p>Web: <a class="url org" href="http://weborganics.co.uk/">WebOrganics</a></p>
 <div>
 	<p><span class="geo">
 		Location: <abbr title="53.7552" class="latitude">N 53.7552</abbr>,
@@ -79,17 +79,17 @@
 <p>Some friends:</p>
 <ul>
 <li class="vcard" id="james">
-	<a class="url fn" rel="friend met" href="http://www.djkippax.com/">
+	<a class="url fn" href="http://www.djkippax.com/">
 		James Kippax
 	</a>
 </li>
 <li class="vcard" id="josh">
-	<a class="url fn" rel="colleague acquaintance" href="http://labs.utopian.net/blogs/josh/">
+	<a class="url fn" href="http://labs.utopian.net/blogs/josh/">
 		Josh Wood
 	</a>
 </li>
 <li class="vcard" id="donna">
-	<a class="url fn" rel="friend met" href="http://www.dottyart.co.uk/">
+	<a class="url fn" href="http://www.dottyart.co.uk/">
 		Donna Mckno
 	</a>
 </li>
