--- a/dataset/hatom.html
+++ b/dataset/hatom.html
@@ -6,39 +6,7 @@
 	<title>hAtom</title>
 	<style type="text/css">
 	<!--
-	body, p, ol, ul, td {
-		font-family:"Lucida Sans Unicode",Verdana,sans-serif;
-		font-size:small;
-	}
-	h3, h2, h1{
-		color:black;
-		font-weight:bold;
-	}
-	h2 {
-		font-size:20px;
-	}
-	hgroup, aside {
-	position: relative;
-	left: 20px;
-	top: 0px;
-	right: 0px;
-	bottom: 0px;
-	}
-	a:link, a:visited {
-		color:black;
-		text-decoration:none;
-	}
-	textarea{
-		background-color:black;
-		color:white;
-		display:block;
-		font-size:small;
-		padding:2px;
-		overflow:auto;
-		width:80%;
-		height:400px;
-	}
-	a:hover { text-decoration:none; background-color:black;color:white; }
+		body{padding:1em 2em;margin:0 auto;font-family:sans-serif;color:black;background:white;width:80%}th,td{font-family:sans-serif}h1,h2,h3,h4,h5,h6{text-align:left}h1,h2,h3{color:#005A9C;background:white}h1{font:170% sans-serif}h2{font:140% sans-serif}h3{font:120% sans-serif}h4{font:bold 100% sans-serif}h5{font:italic 100% sans-serif}h6{font:small-caps 100% sans-serif}div.head{margin-bottom:1em}div.head h1{margin-top:2em;clear:both}div.head table{margin-left:2em;margin-top:2em}pre{margin-left:2em}/**/dt,dd{margin-top:0;margin-bottom:0}dt{font-weight:bold}pre,code{font-family:monospace}ul.toc{list-style:disc;list-style:none}#references ul li { list-style-type:none;}pre{background-color:#d5dee3;border-top-width:4px;border-top-style:double;border-top-color:#d3d3d3;border-bottom-width:4px;border-bottom-style:double;border-bottom-color:#d3d3d3;padding:4px;margin:0em}.vcard{padding-top:30px;}
 	//-->
 	</style>
 </head>
