--- a/dataset/article.html
+++ b/dataset/article.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link rel="dataset" href="dataset-article.json" type="application/json">
+	<link rel="transformation" href="dataset-article.json" type="application/json">
 	<title>HTML 5 Article + hMedia</title>
 	<style type="text/css">
 	<!--
@@ -45,8 +45,9 @@
 	</section></li>
 	</ol>
 	</div>
-<aside>
-  <p>Get RDF <a href="javascript:void(location.href='http://weborganics.co.uk/dataset/?url='+location.href)">dataset</a></p></aside>
+	<aside>
+		<p>Get RDF <a href="javascript:void(location.href='http://weborganics.co.uk/dataset/?url='+location.href)">dataset</a></p>
+	</aside>
 </article>
 </body>
 </html>
