--- a/dataset/foaf.html
+++ b/dataset/foaf.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link rel="dataset" href="dataset-foaf.json" type="application/json">
+	<link rel="transformation" href="dataset-foaf.json" type="application/json">
   	<title>FOAF</title>
 	<style type="text/css">
 	<!--
