--- a/dataset/hatom.html
+++ b/dataset/hatom.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link rel="dataset" href="dataset-hatom.json" type="application/json">
+	<link rel="transformation" href="dataset-hatom.json" type="application/json">
 	<title>hAtom</title>
 	<style type="text/css">
 	<!--
